force-app/main/default/objects/Survey__c/fields/Adezivi_polistiren_si_gips_carton__c.field-meta.xml
<CustomField>
    <fullName>Adezivi_polistiren_si_gips_carton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adezivi polistiren si gips-carton</label>
    <type>Checkbox</type>
</CustomField>