force-app/main/default/objects/Survey__c/fields/Alt_brand_raft_coloranti_manuali__c.field-meta.xml
<CustomField>
    <fullName>Alt_brand_raft_coloranti_manuali__c</fullName>
    <label>Alt brand raft coloranti manuali</label>
    <length>255</length>
    <type>Text</type>
</CustomField>