force-app/main/default/objects/Survey__c/fields/Alt_brand_raft_lac_email__c.field-meta.xml
<CustomField>
    <fullName>Alt_brand_raft_lac_email__c</fullName>
    <label>Alt brand raft lac/email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>