force-app/main/default/objects/Survey__c/fields/Alt_producator_masina_de_colorat__c.field-meta.xml
<CustomField>
    <fullName>Alt_producator_masina_de_colorat__c</fullName>
    <label>Alt producator- masina de colorat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>