force-app/main/default/objects/Survey__c/fields/Alte_categorii_comercializate__c.field-meta.xml
<CustomField>
    <fullName>Alte_categorii_comercializate__c</fullName>
    <label>Alte categorii comercializate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>