force-app/main/default/objects/Survey__c/fields/Apelativ_Decident_Comenzi__c.field-meta.xml
<CustomField>
    <fullName>Apelativ_Decident_Comenzi__c</fullName>
    <label>Apelativ Decident Comenzi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dl</fullName>
            </value>
            <value>
                <fullName>Dna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>