force-app/main/default/objects/Survey__c/fields/Are_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Are_Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Catalog</label>
    <type>Checkbox</type>
</CustomField>