force-app/main/default/objects/Survey__c/fields/Are_merchandiser_propriu__c.field-meta.xml
<CustomField>
    <fullName>Are_merchandiser_propriu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are merchandiser propriu</label>
    <type>Checkbox</type>
</CustomField>