force-app/main/default/objects/Survey__c/fields/Are_Website__c.field-meta.xml
<CustomField>
    <fullName>Are_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Website</label>
    <type>Checkbox</type>
</CustomField>