force-app/main/default/objects/Survey__c/fields/Clasificare_Locatie__c.field-meta.xml
<CustomField>
    <fullName>Clasificare_Locatie__c</fullName>
    <label>Clasificare Locatie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LKA</fullName>
            </value>
            <value>
                <fullName>MMC</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>MXR</fullName>
            </value>
            <value>
                <fullName>SHR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>