force-app/main/default/objects/Survey__c/fields/Detine_Masina_De_Colorat__c.field-meta.xml
<CustomField>
    <fullName>Detine_Masina_De_Colorat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detine Masina De Colorat</label>
    <type>Checkbox</type>
</CustomField>