force-app/main/default/objects/Survey__c/fields/Detine_rafturi_branduite_de_la_produc__c.field-meta.xml
<CustomField>
    <fullName>Detine_rafturi_branduite_de_la_produc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>"Detine rafturi branduite  de la  produc</label>
    <type>Checkbox</type>
</CustomField>