force-app/main/default/objects/Survey__c/fields/Email_uri__c.field-meta.xml
<CustomField>
    <fullName>Email_uri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email-uri</label>
    <type>Checkbox</type>
</CustomField>