force-app/main/default/objects/Survey__c/fields/Gips_carton__c.field-meta.xml
<CustomField>
    <fullName>Gips_carton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gips-carton</label>
    <type>Checkbox</type>
</CustomField>