force-app/main/default/objects/Survey__c/fields/Gleturi_incarcare_finisaj__c.field-meta.xml
<CustomField>
    <fullName>Gleturi_incarcare_finisaj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gleturi incarcare/finisaj</label>
    <type>Checkbox</type>
</CustomField>