force-app/main/default/objects/Survey__c/fields/Hidro_izolatii__c.field-meta.xml
<CustomField>
    <fullName>Hidro_izolatii__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidro izolatii</label>
    <type>Checkbox</type>
</CustomField>