force-app/main/default/objects/Survey__c/fields/Lacuri__c.field-meta.xml
<CustomField>
    <fullName>Lacuri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lacuri</label>
    <type>Checkbox</type>
</CustomField>