force-app/main/default/objects/Survey__c/fields/Lavabila_alba__c.field-meta.xml
<CustomField>
    <fullName>Lavabila_alba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lavabila alba</label>
    <type>Checkbox</type>
</CustomField>