force-app/main/default/objects/Survey__c/fields/Lavabila_gata_colorata__c.field-meta.xml
<CustomField>
    <fullName>Lavabila_gata_colorata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lavabila gata colorata</label>
    <type>Checkbox</type>
</CustomField>