force-app/main/default/objects/Survey__c/fields/Masina_de_colorat_Policolor__c.field-meta.xml
<CustomField>
    <fullName>Masina_de_colorat_Policolor__c</fullName>
    <label>Masina de colorat Policolor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>