force-app/main/default/objects/Survey__c/fields/Materiale_grele_ciment_feroase_cara__c.field-meta.xml
<CustomField>
    <fullName>Materiale_grele_ciment_feroase_cara__c</fullName>
    <defaultValue>false</defaultValue>
    <label>"Materiale grele (ciment,  feroase, cara</label>
    <type>Checkbox</type>
</CustomField>