force-app/main/default/objects/Survey__c/fields/Numar_merchandiser__c.field-meta.xml
<CustomField>
    <fullName>Numar_merchandiser__c</fullName>
    <label>Numar merchandiser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>