force-app/main/default/objects/Survey__c/fields/Tencuiala_umeda_sau_uscata__c.field-meta.xml
<CustomField>
    <fullName>Tencuiala_umeda_sau_uscata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tencuiala (umeda sau uscata)</label>
    <type>Checkbox</type>
</CustomField>