force-app/main/default/objects/Survey__c/fields/Tip_survey__c.field-meta.xml
<CustomField>
    <fullName>Tip_survey__c</fullName>
    <label>Tip Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Survey vizibilitate TT</fullName>
            </value>
            <value>
                <fullName>Survey vizibilitate KA</fullName>
            </value>
            <value>
                <fullName>Survey de pret</fullName>
            </value>
            <value>
                <fullName>Survey distributie numerica</fullName>
            </value>
            <value>
                <fullName>Survey mijloace fixe</fullName>
            </value>
            <value>
                <fullName>Survey executie promo</fullName>
            </value>
            <value>
                <fullName>Survey executie produs nou</fullName>
            </value>
            <value>
                <fullName>Survey calitatea serviciilor oferite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>