force-app/main/default/objects/Survey__c/fields/Vinde_Online__c.field-meta.xml
<CustomField>
    <fullName>Vinde_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vinde Online</label>
    <type>Checkbox</type>
</CustomField>