force-app/main/default/objects/Survey__c/fields/XPS_EPS_vata_minerala__c.field-meta.xml
<CustomField>
    <fullName>XPS_EPS_vata_minerala__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XPS, EPS, vata minerala</label>
    <type>Checkbox</type>
</CustomField>